2014-06-13  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION: Version 0.1.0 and first CRAN upload
