@@ -1,8 +1,8 @@
 Package: pkgKitten
 Type: Package
 Title: Create simple packages which do not upset R CMD check
-Version: 0.1.0
-Date: 2014-06-13
+Version: 0.1.0.1
+Date: 2014-09-07
 Author: Dirk Eddelbuettel
 Maintainer: Dirk Eddelbuettel <edd@debian.org>
 Description: This package provides a function kitten() which 
