@@ -1,1 +1,2 @@
-exportPattern("^[[:alpha:]]+")
+export(kitten,
+       playWithPerPackageHelpPage)
