@@ -1,4 +1,4 @@
-% Generated by roxygen2 (4.0.1): do not edit by hand
+% Generated by roxygen2 (4.0.2): do not edit by hand
 \name{kitten}
 \alias{kitten}
 \title{Create a very simple package}
@@ -27,7 +27,7 @@ Nothing is returned as the function is invoked for its
 side effect of creating a new package.
 }
 \description{
-The \code{kitten} function create an (almost) empty example
+The \code{kitten} function creates an (almost) empty example
 package.
 }
 \details{
