@@ -1,3 +1,8 @@
+2014-09-07  Dirk Eddelbuettel  <edd@debian.org>
+
+	* R/pkgKitten.R: New function playWithPerPackageHelpPage() to create
+	a basic per-package manual page which purrs
+
 2014-06-13  Dirk Eddelbuettel  <edd@debian.org>
 
 	* DESCRIPTION: Version 0.1.0 and first CRAN upload
